--- a/ants.html
+++ b/ants.html
@@ -1,5 +1,8 @@
 <html>
     <head>
         <script src='ants.js'></script>
+        <script>
+            new AntFarm();
+        </script>
     </head>
 </html>
